--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,9 @@ springdoc.swagger-ui.enabled= true
 springdoc.swagger-ui.path=/doc/swagger.html
 springdoc.packages-to-scan= com.ghostappi.backend
 #Multipart configuration
-spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.enabled=${SPRING_SERVLET_MULTIPART_ENABLED}
+spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE}
+spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE}
 
 logging.level.org.springframework.security=DEBUG
 
