--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ SPRING_DATASOURCE_USERNAME=bdgs_user
 SPRING_DATASOURCE_PASSWORD=LK0lcTxXIsvMoy1f7a27z7HbXNd7XJXh
 SPRING_JPA_HIBERNATE_NAMING_PHYSICAL_STRATEGY=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT=org.hibernate.dialect.PostgreSQLDialect
+SPRING_SERVLET_MULTIPART_ENABLED=true
+SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE=10MB
+SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE=10MB
