--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,21 +4,25 @@ spring.application.name=ghostsupplements
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=${SPRING_JPA_HIBERNATE_NAMING_PHYSICAL_STRATEGY}
 spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT}
+spring.servlet.multipart.enabled=${SPRING_SERVLET_MULTIPART_ENABLED}
+spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE}
+spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE}
 
+spring.jpa.hibernate.ddl-auto=none
 # swagger-ui
 springdoc.api-docs.enabled= true
 springdoc.swagger-ui.enabled= true
 springdoc.swagger-ui.path=/doc/swagger.html
 springdoc.packages-to-scan= com.ghostappi.backend
-#Multipart configuration
-spring.servlet.multipart.enabled=${SPRING_SERVLET_MULTIPART_ENABLED}
-spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE}
-spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE}
-
 logging.level.org.springframework.security=DEBUG
 
-# security.jwt.secret-key=${SECURITY_JWT_SECRET_KEY}
-# security.jwt.expiration-time=${SECURITY_JWT_EXPIRATION_TIME}
+# spring.datasource.url=jdbc:mysql://localhost:3306/ghostsupplements
+# spring.datasource.username=root
+# spring.datasource.password=administrador
+# spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+# spring.servlet.multipart.enabled=true
+# spring.servlet.multipart.max-file-size=20MB
+# spring.servlet.multipart.max-request-size=20MB
